scrollbar fixed

--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@
 }
 
 ::-webkit-scrollbar {
-    width: 12px;
+    width: 10px;
     background-color: #0b090a;
 }
 
